--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
 
     <div id="app">
         <div class="container">
-
+            
             <h1>La mia Lista</h1>
 
             <div class="todo-container">
+                <input type="text" v-model="newTodo" placeholder="inserisci lista">
+                <button @click="addTodo" >Aggiungi</button>
 
                 <ul>
                     <li v-for="(todo , i) in todos">
                        
-                       <span @click="deleteTodo(i)" > {{ todo.text }}<s> ciao</s></span>  
+                       <span > {{ todo.text }} </span>  <span @click="deleteTodo(i)" > &cross; </span>
                     </li>
                 </ul>
 
