--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button @click="addTodo" >Aggiungi</button>
 
                 <ul>
-                    <li :class="{textline: todos[i].done == true}"  v-for="(todo , i) in todos">
+                    <li :class="{textline: todos[i].done == true}"  v-for="(todo , i) in todos" @click="changeTodo(i)">
                        
                        <span > {{ todo.text }} </span>  <span @click="deleteTodo(i)" > &cross; </span>
                     </li>
